--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.username=avnadmin
 
 #### for pushing into git iam commnting passwrod, when cloning, remove comment and use your own password
 
-#spring.datasource.password=AVNS_8ejo_VYJWV8Q1NJZiaG
+#spring.datasource.password=
+# AVNS_8ejo_VYJWV8Q1NJZiaG
 
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 
