Revert "files uploaded"
This reverts commit 1fda3db8002856fba9576ca8ca8a4656234aba17.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,7 @@ spring.application.name=springboot-temp
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://mysql-179ba76f-bolisettyramakrishna429-8888.k.aivencloud.com:20334/defaultdb
 spring.datasource.username=avnadmin
-
-#### for pushing into git iam commnting passwrod, when cloning, remove comment and use your own password
-
-#spring.datasource.password=AVNS_8ejo_VYJWV8Q1NJZiaG
-
+spring.datasource.password=AVNS_8ejo_VYJWV8Q1NJZiaG
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 
 logging.level.org.springframework.boot.autoconfigure.security=INFO
