--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,5 +29,10 @@ jobs:
     - name: Build with Maven
       run: mvn -B clean install --file pom.xml
 
-    - name: Submit dependency graph
-      uses: advanced-security/maven-dependency-submission-action@v4
+    # remove or fix this if not needed
+    # - name: Submit dependency graph
+    #   uses: advanced-security/maven-dependency-submission-action@v4
+    #   with:
+    #     directory: .
+    #     maven-options: -B -f pom.xml
+
